--- a/styles.css
+++ b/styles.css
@@ -85,4 +85,15 @@ button:hover{
 .whowe{
     background: rgba(0, 131, 169, 1) !important;
 }
-
+.table {
+    border-style: ridge;
+    border-width: 150px;
+    border-color: #8ebf42;
+    background-color: #d9d9d9;
+  }
+.th {
+border: 5px solid #095484;
+}
+.td {
+border: 20px groove #1c87c9;
+}
