--- a/styles.css
+++ b/styles.css
@@ -128,3 +128,270 @@ button:hover {
     color: white;
     font-family: "Montserrat", sans-serif;
 }
+
+
+
+
+
+-----
+
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    /* background-color: #1f1f22; */
+}
+.one{
+  padding-left: 10%;
+    padding-right: 10%;
+    padding-bottom: 50px;
+    padding-top: 50px;
+    text-overflow: initial;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    color: white;
+    text-decoration: rgba(0, 131, 169, 1);
+    text-align: center;
+}
+a, button{
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    color: white;
+    text-decoration: none;
+}
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 5%;
+}
+
+.logo{
+    cursor: pointer;
+}
+
+.nav_links{
+    list-style: none;
+}
+
+.nav_links li {
+    display: inline-block;
+    padding: 0px 10px;
+}
+
+.nav_links li a{
+    transition: all 0.3s ease 0s;
+}
+
+.nav_links li a:hover{
+    color: white
+}
+
+button{
+    padding: 9px 25px;
+    background-color: rgba(0, 131, 169, 1);
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+    text-align: right;
+    
+}
+
+button:hover{
+    background-color: rgba(200, 200, 200, 0.8);
+}
+
+.headtop{
+    padding-top: 50px;
+    padding-bottom: 10px;
+    padding-left: 5%;
+    padding-right: 5%;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 1000;
+    font-size: 32px;
+    color: white;
+    text-decoration: rgba(0, 131, 169, 1);
+    text-align: center;
+}
+
+.q1{
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom:0;
+    padding-top: 10px;
+    text-overflow: initial;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    color: white;
+    text-decoration: rgba(0, 131, 169, 1);
+    text-align: left;
+}
+#Covidpic{
+  float: right;
+ padding:0% 5%;
+ display: block;
+    margin-left: auto;
+    margin-right: auto;
+  
+}
+.headtext {
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-bottom: 50px;
+    padding-top: 20px;
+    text-overflow: initial;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    color: white;
+    text-decoration: rgba(0, 131, 169, 1);
+    text-align: center;
+}
+
+.q{
+  font-weight: 600;
+  font-size: 22px;
+}
+.whowe{
+    background: rgba(0, 131, 169, 1) !important;
+}
+
+.foot{
+    color:white;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+    font-weight: lighter ;
+}
+
+.background{
+  background-color:#86c5da;
+}
+.faqs{
+  background-color:#86c5da;
+}
+.whatare_1{
+padding-left:4%;
+line-height: 2;
+background-color: #a5e5fa;
+width: 65%;
+height: 30%;
+float: left;
+font-family: "Montserrat", sans-serif;
+
+}
+
+
+.whatare{
+padding-left:4%;
+line-height: 2;
+}
+
+
+.left{
+
+line-height: 2;
+
+}
+#box_6 {
+  background-color: #a5e5fa;
+  width: 65%;
+  height: 20%;
+  float: left;
+  font-family: "Montserrat", sans-serif;
+
+}
+#box_7 {
+  background-color: #a5e5fa;
+  width: 75%;
+  height: 50%;
+  float: right;
+  font-family: "Montserrat", sans-serif;
+
+}
+
+#box_8 {
+  background-color: #a5e5fa;
+  text-align: left;
+  font-size: 30px;
+  width: 50%;
+  padding: 20px;
+  float: right;
+
+
+}
+#box_9 {
+  background-color: #5a99ad;
+  width: 65%;
+  height: 35%;
+  float: left;
+  font-size: 30px;
+}
+#box_10 {
+  
+  width: 100%;
+  height: 20%;
+  float: left;
+  font-family: "Montserrat", sans-serif;
+  padding-left: 10px;
+  color:darkblue;
+  background-color:#86c5da;
+}
+
+#kumar{
+  padding-bottom: 5%;
+  padding-top:15%;
+}
+
+.float-container {
+    border: 3px solid #fff;
+    padding: 20px;
+}
+.float-child {
+    width: 50%;
+    float: left;
+    padding: 20px;
+    border: 2px solid red;
+}  
+
+p{
+  font-size:20px;
+  line-height: 2;
+}
+
+#image{
+  margin-left: 10px;
+}
+
+#pic{
+  float: right;
+ padding:0% 10%;
+ display: block;
+    margin-left: auto;
+    margin-right: auto;
+  
+}
+#footer_left{
+  float: left;
+  padding-left: 110px;
+
+}
+#footer_right{
+  float: left;
+  text-align: center;
+  font-size: 20px;
+  padding-left: 10px;
+  border: 2px solid black;
+}
+a{
+  font-size: 20px;
+}
