--- a/styles.css
+++ b/styles.css
@@ -140,7 +140,7 @@ button:hover {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    /* background-color: #1f1f22; */
+    background-color: #1f1f22; 
 }
 .one{
   padding-left: 10%;
