--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ button {
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
     font-size: 16px;
-    color: white;
+    color: #0c008b;
     text-decoration: none;
 }
 
