--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,10 @@
     /* background-color: #1f1f22; */
 }
 
-li,
+li{
+    color: #0c008b;
+}
+
 a,
 button {
     font-family: "Montserrat", sans-serif;
