--- a/styles.css
+++ b/styles.css
@@ -284,14 +284,14 @@ button:hover {
     line-height: 2;
 }
 #box_6 {
-    background-color: #a5e5fa;
+    background-color: #96d5eb;
     width: 65%;
     height: 20%;
     float: left;
     font-family: "Montserrat", sans-serif;
 }
 #box_7 {
-    background-color: #a5e5fa;
+    background-color: #96d5eb;
     width: 75%;
     height: 50%;
     float: right;
