--- a/styles.css
+++ b/styles.css
@@ -284,7 +284,7 @@ button:hover {
     line-height: 2;
 }
 #box_6 {
-    background-color: #96d5eb;
+    background-color: #151b54;
     width: 65%;
     height: 20%;
     float: left;
