--- a/styles.css
+++ b/styles.css
@@ -291,7 +291,7 @@ button:hover {
     font-family: "Montserrat", sans-serif;
 }
 #box_7 {
-    background-color: #151b54;
+    background-color: #151B54;
     width: 75%;
     height: 50%;
     float: right;
