--- a/styles.css
+++ b/styles.css
@@ -268,7 +268,7 @@ button:hover {
 .whatare_1 {
     padding-left: 4%;
     line-height: 2;
-    background-color: #151B54;
+    background-color: #151b54;
     width: 65%;
     height: 30%;
     float: left;
