--- a/styles.css
+++ b/styles.css
@@ -260,7 +260,7 @@ button:hover {
 }
 
 .faqs {
-    background-color: #86c5da;
+    /* background-color: #86c5da; */
 }
 .whatare_1 {
     padding-left: 4%;
@@ -314,8 +314,8 @@ button:hover {
     float: left;
     font-family: "Montserrat", sans-serif;
     padding-left: 10px;
-    color: darkblue;
-    background-color: #86c5da;
+    color: white;
+    /* background-color: #86c5da; */
 }
 
 #kumar {
