--- a/styles.css
+++ b/styles.css
@@ -154,7 +154,8 @@ button {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    height: 600px;
+    padding-bottom: 20px;
 }
 header {
     display: flex;
