--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ header {
 }
 
 .nav_links li a:hover {
-    color: white;
+    color: #ff7a7a;
 }
 
 button {
@@ -179,10 +179,6 @@ header {
 
 .nav_links li a {
     transition: all 0.3s ease 0s;
-}
-
-.nav_links li a:hover {
-    color: white;
 }
 
 button {
